--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ fig-cap-location: margin
 
 ## History of SAIL
 
-The idea for the Sports Analysis and Intelligence Laboratory (SAIL) was conceived in Fall 2022. Conor Kerr, advised by Dr. Mario Giacomazzo of the STOR Department, had been working on sports analytics projects with UNC Men’s and Women’s Basketball for two years. As the work demand increased, the need to expand increased. From December 2022 to January 2023, the first SAIL applications were received, and 52 well-deserving undergraduates applied to be an Undergraduate Sports Analyst (USA). With the help of Andrew Ackerman, a PhD student in the STOR department, we selected 5 students to be the first team of USAs.
+The idea for the Sports Analytics Intelligence Laboratory (SAIL) was conceived in Fall 2022. Conor Kerr, advised by Dr. Mario Giacomazzo of the STOR Department, had been working on sports analytics projects with UNC Men’s and Women’s Basketball for two years. As the work demand increased, the need to expand increased. From December 2022 to January 2023, the first SAIL applications were received, and 52 well-deserving undergraduates applied to be an Undergraduate Sports Analyst (USA). With the help of Andrew Ackerman, a PhD student in the STOR department, we selected 5 students to be the first team of USAs.
 
 [![Founding members of SAIL from left to right: Jacob Thoma, Max Sleek, Lewis Dubrowski (top), Sarah Wooster, Conor Kerr, Abigail Mabe (bottom)](imgs/Class1.jpg){fig-align="center" width="70%" text-align="center"}](https://stor.unc.edu/news-item/sports-analysis-intelligence-laboratory/)
 
@@ -16,3 +16,5 @@ We firmly believe that sports analytics can be useful in helping athletes and co
 ## Contacting SAIL
 
 If you are a member of the UNC community and would like the help of SAIL on data collection, data analysis, or sports analytics research, please fill out the Google form embedded [here](../contact.html). After we discuss your project ideas with the team, we will respond quickly to set up a meeting with you and SAIL. If we believe that we can be helpful and provide you the analytical support you need, we will propose a plan to work with you. Our partnership with maybe short-term or long-term depending on your needs and our availability.
+
+Hello
