--- a/projects.qmd
+++ b/projects.qmd
@@ -2,17 +2,14 @@
 title: "Current SAIL Team"
 ---
 
-## Undergraduate Sports Analysts (USAs)
+## Working Projects
 
-### Conor Kerr
+<b>Assessment of Cyclical and Derivative-based Acute:Chronic Workload Ratios for Predicting Injuries in Collegiate Men's Basketball</b>
 
+Contributors: Conor Kerr, Doug Halverson, Khushi Shah
 
-## Graduate Advisors
+## Past Projects
 
-## Faculty Advisors
+<b>Utilizing Training Load and Intensity to Predict Team Performance in NCAA Division I Men's Basketball</b>
 
-## Alumni
-
-Andy
-Jake
-Sarah
+Contributors: Conor Kerr, Sam Moore, Doug Halverson, Abbie Smith-Ryan ####Presented in April, 2023
