--- a/index.qmd
+++ b/index.qmd
@@ -16,3 +16,5 @@ We firmly believe that sports analytics can be useful in helping athletes and co
 ## Contacting SAIL
 
 If you are a member of the UNC community and would like the help of SAIL on data collection, data analysis, or sports analytics research, please fill out the Google form embedded [here](../contact.html). After we discuss your project ideas with the team, we will respond quickly to set up a meeting with you and SAIL. If we believe that we can be helpful and provide you the analytical support you need, we will propose a plan to work with you. Our partnership with maybe short-term or long-term depending on your needs and our availability.
+
+Hello
