--- a/apply.qmd
+++ b/apply.qmd
@@ -2,11 +2,15 @@
 title: "SAIL Undergraduate Student Analyst Application"
 ---
 
+<!-- View PDF in iframe -->
+
 <h2>View PDF</h2>
 
 <iframe src="attachments/SAIL-USA-2025-R.pdf" width="100%" height="500px" style="border: 1px solid #ccc; border-radius: 8px;">
 
 </iframe>
+
+<!-- Download R Markdown file -->
 
 <h2>Download Markdown File</h2>
 
